[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caishendao"
version = "0.1.0"
authors = [
  { name = "emptist", email = "your.email@example.com" },
]
description = "A utility package for financial analysis and trading"
readme = "readme.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "yfinance",
    "vectorbt",
    "pandas-ta",
    "bokeh",
    "streamlit",
    "streamlit-aggrid",
    "google-generativeai>=0.3.0",
    "requests",
    "watchdog",
    "streamlit-js-eval"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
caishendao = ["*.md", "*.txt", "*.mp3"]